# GenX-Core

./: docker-compose.yml  requirements.txt
genx_platform/: .env.prod  .gitignore  DEPLOYMENT.md  Makefile  README.md  certificates.ps1  docker-compose.prod.yml  docker-compose.yml  fix_imports.py  monitoring.ps1  pyproject.toml  requirements.txt  test_service_basic.py
genx_platform/environments/dev/: docker-compose.yml
genx_platform/environments/production/: docker-compose.yml
genx_platform/environments/staging/: docker-compose.yml
genx_platform/genx_components/common/: base_service.py  config.py  hardware_detector.py  telemetry.py
genx_platform/genx_components/microservices/llm/: .dockerignore  .env.example  Dockerfile  Makefile  health_check.py  requirements.lock.txt  start_service.py
genx_platform/genx_components/microservices/metrics/: .env.template  Dockerfile  Makefile  docker-compose.gpu.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.simple.yml  (+7 more)
genx_platform/monitoring/: README.md  docker-compose.monitoring.tls.yml
genx_platform/monitoring/alertmanager/: web-config.yml
genx_platform/monitoring/grafana/: grafana-tls.ini
genx_platform/monitoring/prometheus/: prometheus-tls.yml  web-config.yml
genx_platform/protos/: embedding_service.proto  llm_service.proto  metrics_service.proto  proxy_service.proto
genx_platform/scripts/: generate_protos.py
genx_platform/services/proxy_service/: debug_llm_direct.py  force_load_model.py  load_model_test.py  pytest.ini  start_service.py  test_client.py  test_integration.py
(+193 files in other folders)
